# markitdown-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
src/: csv.rs  docx.rs  error.rs  excel.rs  html.rs  image.rs  lib.rs  llm.rs  main.rs  model.rs  pdf.rs  pptx.rs  rss.rs
tests/: csv.rs  docx.rs  excel.rs  html.rs  image.rs  pdf.rs  pptx.rs  rss.rs  zip.rs
tests/test_files/: test.atom  test.csv
