[package]
name = "markitdown"
version = "0.1.7"
edition = "2021"
description = "A Rust library designed to facilitate the conversion of various document formats into markdown text."
repository = "https://github.com/uhobnil/markitdown-rs"
license = "MIT"

[dependencies]
calamine = "0.26.1"
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
html2md = "0.2.15"
kamadak-exif = "0.6.1"
infer = "0.15"
mime_guess = "2.0.5"
docx = { version = "1.1.2", git = "https://github.com/tuxmark5/docx-rs.git"}
pdf-extract = "0.8.0"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
quick-xml = "0.37.2"
zip = { version = "2.2.2", default-features = false, features = ["deflate", "aes-crypto", "time"] }
serde_json = "1.0.138"
tokio = "1.43.0"
base64 = "0.22.1"
rig-core = "0.8.0"
# rss = "2.0.12"
feed-rs = "2.3.1"
tempfile = "3.17.1"
